--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
+# Environments
+.env
+.venv
+env/
 venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Editors
 .vscode
+
+# Database
+*.db
+
+# Others
 static/
