--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,13 @@ __pycache__/
 *$py.class
 
 # Editors
-.vscode
-.idea
+.vscode/
+.idea/
 
 # Database
 app.db
 
 # Others
 static/
+.ycm_extra_conf.py
+.style.yapf
